# opengl-renderer

./: .gitignore  CMakeLists.txt  main.cpp
camera/: camera.cpp  camera.h
material/: material.cpp  material.h
mesh/: mesh.cpp  mesh.h
model/: model.cpp  model.h
model/mesh/: mesh.cpp  mesh.h
shader/: shader.cpp  shader.h
shaders/: blankShader.vert  lightTarget.frag  lightTarget.vert  phongShader.frag  phongShader.vert  shader.frag  shader.vert
src/Assets/: AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/Core/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Game/: Game.cpp  Game.h
src/Input/: Input.cpp  Input.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
texture/: texture.cpp  texture.h
window/: window.cpp  window.h
